--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "epxress": "^0.0.1-security",
+    "express": "^4.21.2",
     "mongoose": "^8.8.4"
   }
 }
